updated formating of filter button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,3 +223,14 @@ select {
     opacity: 1;
   }
 }
+
+.btn-default {
+  color: #ffffff;
+  background-color: #4e5d6c;
+  border-color: white;
+}
+.btn-default:hover {
+  color: #ffffff;
+  background-color: #4e5d6c;
+  border-color: white;
+}
